@@ -112,6 +112,22 @@ can be further customized or adjusted by the user.</p>
 <div class='tags'>
 </div>
   </dd>
+  <dt id='invert_layers-variable'>
+    invert_layers
+    =
+  </dt>
+  <dd>
+    <pre><code class='coffeescript'>false</code></pre>
+    <div class='docstring'>
+  <p>[Boolean] Invert the order of the layers in the legend.</p><ul>
+<li><code>false</code> - Layers on top are at the top of the legend.</li>
+<li><code>true</code> - Layers on top are at the bottom of the legend.</li>
+</ul>
+
+</div>
+<div class='tags'>
+</div>
+  </dd>
   <dt id='html_names-variable'>
     html_names
     =
