@@ -45,6 +45,14 @@
     </p>
     <div id="plot_legend_example"></div>
 
+    <form>
+        <label>
+            <input id="invert_layers" type="checkbox" />
+            Invert layers
+        </label>
+        <br />
+    </form>
+
     <script src="legend_example.js"></script>
 </body>
 </html>
