@@ -1,3 +1,4 @@
+* Add ability to invert order of layers in plot legends.
 * Make table column headers optional.
 * Fix plot's ability to rescale auto-scaled scales.
 * Add ability for Sankey to limit the number of nodes or links rendered.
